--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # DB 접속 설정
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/user/jpa?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/woorifisa/jpa?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=0000
