--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 
 # DB 접속 설정
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/user/jpa?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/boardtest/jpa?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=0000
 
 # Entity를 이용해서 테이블 생성
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # 실행되는 SQL 보여주기
 spring.jpa.show-sql=true
 
 # SQL 예쁘게
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # SQL 실행 파라미터 보이기
 logging.level.org.hibernate.orm.jdbc.bind=trace
