--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 
 # DB 접속 설정
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/woorifisa/jpa?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/woorifisa
 spring.datasource.name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=0000
 
 # Entity를 이용해서 테이블 생성
 spring.jpa.hibernate.ddl-auto=create
+
+
 
 # 실행되는 SQL 보여주기
 spring.jpa.show-sql=true
