--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>3.1.3</version>
 		</dependency>
+<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
+<dependency>
+    <groupId>org.webjars</groupId>
+    <artifactId>bootstrap</artifactId>
+    <version>5.3.1</version>
+</dependency>
 
 	</dependencies>
 
