--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 # DB 접속 설정
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/woorifisa
+spring.datasource.url=jdbc:mysql://team5-db.cvqn3ewwzknb.ap-northeast-2.rds.amazonaws.com:3306/test
 spring.datasource.name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=0000
+spring.datasource.username=admin
+spring.datasource.password=woorifisa
 
 # Entity를 이용해서 테이블 생성
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 
 
@@ -24,3 +24,7 @@ logging.level.com.example.demo=trace
 # web mvc 관련 설정
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
+spring.mvc.static-path-pattern=/resources/**
+
+
+spring.thymeleaf.enabled=false
