--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # DB 접속 설정
-spring.datasource.url=jdbc:mysql://team5-db.cvqn3ewwzknb.ap-northeast-2.rds.amazonaws.com:3306/test
+spring.datasource.url=jdbc:mysql://team5-db.cvqn3ewwzknb.ap-northeast-2.rds.amazonaws.com:3306/woorifisa
 spring.datasource.name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=admin
 spring.datasource.password=woorifisa
