--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,16 @@
     <version>5.3.1</version>
 </dependency>
 
+
+<!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+<dependency>
+    <groupId>org.assertj</groupId>
+    <artifactId>assertj-core</artifactId>
+    <version>3.24.2</version>
+    <scope>test</scope>
+</dependency>
+
+
 	</dependencies>
 
 	<build>
