--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,5 @@ spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
 
-
+spring.main.allow-bean-definition-overriding= true
 spring.thymeleaf.enabled=false
