--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,11 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>3.1.3</version>
 		</dependency>
-
+ <dependency>
+        <groupId>taglibs</groupId>
+        <artifactId>standard</artifactId>
+        <version>1.1.2</version>
+    </dependency>
 	</dependencies>
 
 	<build>
