--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ target/
 *.iml
 *.ipr
 web/
-out/
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
@@ -32,3 +32,4 @@ build/
 
 ### VS Code ###
 .vscode/
+/out/
